back.yml
kind: Service
apiVersion: v1
metadata:
  name:  server
spec:
  selector:
    app:  server
  ports:
  - name: express
    port:  3001
    targetPort:  3001

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        editor: vscode
    spec:
      containers:
      - name: server
        image: nuwanudara/qserver:3.0.0

        resources:
          limits:
            memory: 316Mi
            cpu: 500m
