front.yml
kind: Service
apiVersion: v1
metadata:
  name:  client
spec:
  selector:
    app:  client
  ports:
  - name: front
    port:  3000
    targetPort:  3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: nuwanudara/qclient:2.0.0

        resources:
          limits:
            memory: 316Mi
            cpu: 500m
