mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  selector:
    app: mysql-db
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
spec:
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      volumes:
        - name:  mysql-inits
          configMap:
            name:  mysql-init-config
      containers:
      - name: mysql
        image: mysql:latest
        volumeMounts:
        - name: mysql-inits
          mountPath: /docker-entrypoint-initdb.d
        resources:
          limits:
            memory: 1024Mi
            cpu: 500m
        ports:
        - containerPort: 3306
