nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
    - name: nginx
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: init-nginx
          configMap:
            name:  init-nginx
            items:
              - key: nginx.conf
                path: nginx.conf
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 80
        volumeMounts:
        - name: init-nginx
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true

        resources:
          limits:
            memory: 256Mi
            cpu: 200m
