nginxnp.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-np
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
  - name: http
    port: 443
    targetPort: 80
    protocol: TCP
